module_administration_configuration_Kubernetes/k8_yaml/configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage-volu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-volu
  template:
    metadata:
      labels:
        app: storage-volu
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/nginx/html/
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1180
          name: http-port
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/multitool
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap

#          kubectl exec multitool -- env
