module_administration_configuration_Kubernetes/k8_yaml/deployment_nginx_hm3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx-task2
  labels:
    app: nginx-task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-task2
  template:
    metadata:
      labels:
        app: nginx-task2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
