module_administration_configuration_Kubernetes/k8_yaml/nginx-service-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage-conf
  namespace: default
spec:
  selector:
    app: storage-conf
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30027
      name: nginx
