module_administration_configuration_Kubernetes/k8_yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-volu
  namespace: default
spec:
  selector:
    app: storage-volu
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30022
      name: port-1
    - port: 1180
      targetPort: 1180
      protocol: TCP
      nodePort: 30023
      name: port-2
