module_administration_configuration_Kubernetes/k8_yaml/service_network_task2_hm4.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-multi-network-task2-s
  namespace: default
spec:
  selector:
    app: nginx-multi-network
  ports:
  type: NodePort
  ports:
  - port: 30011
    targetPort: 80
    protocol: TCP
    name: port-1
  - port: 30010
    targetPort: 8080
    protocol: TCP
    name: port-2
#    kubectl expose deployment/nginx-multitool-deployment - название deployment
#    kubectl describe svc nginx-multitool-deployment
