module_administration_configuration_Kubernetes/k8_yaml/service_nginx_hm3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-task2-service
spec:
  selector:
    app: nginx-task2
  ports:
  - port: 30082
    targetPort: 80
