module_administration_configuration_Kubernetes/k8_yaml/configuration_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-depl
  labels:
    app: storage-conf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-conf
  template:
    metadata:
      labels:
        app: storage-conf
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-file-1
          mountPath: /usr/share/nginx/html/
        - name: nginx-index-file-2
          mountPath: /etc/nginx/conf
      volumes:
      - name: nginx-index-file-1
        configMap:
          name: index-html-cm
      - name: nginx-index-file-2
        secret:
          secretName: my-tls-secret-2
---
apiVersion: v1
kind: Service
metadata:
  name: storage-conf
spec:
  selector:
    app: storage-conf
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  tls:
  - hosts:
    - micro.ru-central1.internal
    secretName: my-tls-secret-2
  rules:
  - host: micro.ru-central1.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-conf
            port:
              name: nginx
